ADLI Changes of nomenclature, banner, favicon, logo

--- a/apps/fusion/src/index.html
+++ b/apps/fusion/src/index.html
@@ -3,10 +3,10 @@
 
 <head>
   <meta charset="utf-8" />
-  <title>iGot</title>
+  <title>ADLI</title>
   <base href="/" />
   <meta id="id-app-description" name="Description"
-    content="iGOT 2.0 is a learning platform aimed at promoting capacity development among civil services. It is a solution built to be ‘fit for purpose’ to meet the exact learning needs of the civil services. iGOT 2.0 will help create impactful and relevant learning paths to achieve the outcomes relevant to their career aspirations." />
+    content="ADLI is a learning platform aimed at promoting capacity development among civil services. It is a solution built to be ‘fit for purpose’ to meet the exact learning needs of the civil services. ADLI will help create impactful and relevant learning paths to achieve the outcomes relevant to their career aspirations." />
   <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1" />
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <link id="id-app-fav-icon" rel="icon" type="image/png" />
